Add link to github and faceteam logo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <div id="editorContainer">
             <div class="functionBar">
                  <button id="scriptRun" class="btn btn-small">Run</button>
+				 <a class="btn btn-small" href="https://github.com/facetothefate/faceUnit">GitHub</a>
+				 <img style="float:right;width:100px;" src="http://thefaceteam.org/face%20logo.png">
             </div>
             <div id="editor">
             </div>
